cabal-version:       >=1.10
build-type:          Simple
name:                tellme
version:             0.1.0.0

executable tellme
  main-is:             Main.hs
  build-depends:       base >=4.13
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      bytestring
    , ConfigFile
    , containers
    , data-default
    , directory
    , filepath
    , HTTP
    , http-types
    , mime-mail
    , mtl
    , network
    , network-uri
    , scotty
    , snap-core
    , text
    , unix
    , wai
